// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Theme: type= basic, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  color: #666666;
  border: 1px solid #cccccc;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="basic"
>
  <span
    className="c1"
    type="basic"
  />
</div>
`;

exports[`Tag Theme: type= basic, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  color: #666666;
  border: 1px solid #cccccc;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="basic"
>
  <span
    className="c1"
    type="basic"
  />
</div>
`;

exports[`Tag Theme: type= customs, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: ff5588;
  color: #ffffff;
  border: 1px solid ff5588;
}

.c0:hover {
  background: ff5588;
  color: #ffffff;
  border-color: #000000;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="customs"
>
  <span
    className="c1"
    type="customs"
  />
</div>
`;

exports[`Tag Theme: type= customs, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: ff5588;
  color: #ffffff;
  border: 1px solid ff5588;
}

.c0:hover {
  background: ff5588;
  color: #ffffff;
  border-color: #000000;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="customs"
>
  <span
    className="c1"
    type="customs"
  />
</div>
`;

exports[`Tag Theme: type= presets, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: rgba(0,0,0,0.05);
  color: ff5588;
  border: 1px solid ff5588;
}

.c0:hover {
  background: rgba(0,0,0,0.05);
  color: #000000;
  border-color: #000000;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="presets"
>
  <span
    className="c1"
    type="presets"
  />
</div>
`;

exports[`Tag Theme: type= presets, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: rgba(0,0,0,0.05);
  color: ff5588;
  border: 1px solid ff5588;
}

.c0:hover {
  background: rgba(0,0,0,0.05);
  color: #000000;
  border-color: #000000;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="presets"
>
  <span
    className="c1"
    type="presets"
  />
</div>
`;

exports[`Tag Theme: type= primary, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #e8e8e8;
  color: #666666;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.6666666666666667em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="primary"
>
  <span
    className="c1"
    type="primary"
  />
</div>
`;

exports[`Tag Theme: type= primary, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #e8e8e8;
  color: #666666;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.6666666666666667em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="primary"
>
  <span
    className="c1"
    type="primary"
  />
</div>
`;

exports[`Tag default: type = basic 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 0.33333333333333337em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  color: #666666;
  border: 1px solid #cccccc;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="basic"
  type="basic"
>
  <span
    className="c1"
    type="basic"
  />
</div>
`;

exports[`Tag default: type = basic, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  color: #666666;
  border: 1px solid #cccccc;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="basic"
>
  <span
    className="c1"
    type="basic"
  />
</div>
`;

exports[`Tag default: type = customs 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 0.33333333333333337em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #4d63ff;
  color: #ffffff;
  border: 1px solid #4d63ff;
}

.c0:hover {
  background: #4d63ff;
  color: #ffffff;
  border-color: #8090ff;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="basic"
  type="customs"
>
  <span
    className="c1"
    type="customs"
  />
</div>
`;

exports[`Tag default: type = customs, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #4d63ff;
  color: #ffffff;
  border: 1px solid #4d63ff;
}

.c0:hover {
  background: #4d63ff;
  color: #ffffff;
  border-color: #8090ff;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="customs"
>
  <span
    className="c1"
    type="customs"
  />
</div>
`;

exports[`Tag default: type = presets 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 0.33333333333333337em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: rgba(242,39,53,0.05);
  color: #f22735;
  border: 1px solid #f22735;
}

.c0:hover {
  background: rgba(242,39,53,0.05);
  color: #f25762;
  border-color: #f25762;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="basic"
  type="presets"
>
  <span
    className="c1"
    type="presets"
  />
</div>
`;

exports[`Tag default: type = presets, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: rgba(242,39,53,0.05);
  color: #f22735;
  border: 1px solid #f22735;
}

.c0:hover {
  background: rgba(242,39,53,0.05);
  color: #f25762;
  border-color: #f25762;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="presets"
>
  <span
    className="c1"
    type="presets"
  />
</div>
`;

exports[`Tag default: type = primary 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 0.33333333333333337em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #e8e8e8;
  color: #666666;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.6666666666666667em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="basic"
  type="primary"
>
  <span
    className="c1"
    type="primary"
  />
</div>
`;

exports[`Tag default: type = primary, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 1.6666666666666667em;
  border-radius: 1.6666666666666667em;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  padding: 0 0.6666666666666667em;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
  background: #e8e8e8;
  color: #666666;
}

.c1 {
  display: inline-block;
  height: 1.6666666666666667em;
  line-height: 1.6666666666666667em;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  padding: 0;
  vertical-align: top;
}

<div
  checked={false}
  className="c0"
  onClick={[Function]}
  shape="round"
  type="primary"
>
  <span
    className="c1"
    type="primary"
  />
</div>
`;
